# command-k

./: .gitignore  README.md  cmdk  command-k.tmux  demo.tape
.github/: demo.tape
.github/workflows/: release.yml  test.yml
cmdk-rs/: Cargo.toml  README.md
cmdk-rs/src/: app.rs  context.rs  events.rs  main.rs  nvim.rs  provider.rs  session.rs  settings.rs  ui.rs
docs/: ARCHITECTURE.md  NEOVIM.md  PROVIDERS.md
lua/cmdk/: init.lua
scripts/: context.sh  interactive.sh  launcher.sh  popup-wrapper.sh  settings.sh
tests/: mock-ai  test.sh
