[package]
name = "cmdk-rs"
version = "0.1.0"
edition = "2021"
description = "AI-powered command assistant for the terminal"
authors = ["Alexander Nicholson"]
license = "MIT"

[[bin]]
name = "cmdk-rs"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI parsing
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }

# Directory utilities
dirs = "5"

# MD5 hashing for session files
md-5 = "0.10"

# Clipboard support
arboard = "3"

# Error handling
anyhow = "1"
thiserror = "2"

# TTY detection
atty = "0.2"
